# moonarchive

./: .gitignore  .justfile  LICENSE  README.md  pyproject.toml  setup.py
src/moonarchive/: app.py  output.py
src/moonarchive/downloaders/: youtube.py
src/moonarchive/downloaders/youtube/: __init__.py  _cipher.py  _dash.py  _extract.py  _format.py  _innertube.py  _pot_provider.py  _status.py  config.py  dash_manifest.py  model.py  player.py
src/moonarchive/models/: dash_manifest.py  ffmpeg.py  messages.py  youtube.py  youtube_config.py  youtube_player.py
src/moonarchive/util/: ffmpeg.py  paths.py  url.py
tests/: test_template_sub.py
tests/manual/: test_auth_header_generation.py
