[project]
name = "moonarchive"
version = "0.0.1"

classifiers = [
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
]

dependencies = [
    "colorama == 0.4.6",
    "httpx == 0.27.0",
    "msgspec == 0.18.6",
]

[project.scripts]
moonarchive = "moonarchive.app:main"

[project.optional-dependencies]
dev = [
    "mypy == 1.9.0",
    "ruff == 0.3.7",
]
keepawake = [
    "wakepy == 0.9.1",
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
]

[tool.ruff]
line-length = 96
lint.extend-select = ["ANN001", "ANN201", "ANN202"]
