[project]
name = "moonarchive"
version = "0.4.9"

requires-python = ">= 3.11"

classifiers = [
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
]

dependencies = [
    "colorama ~= 0.4",
    "httpx ~= 0.28.0",
    "msgspec ~= 0.20.0",
    "av ~= 15.0",
]

[project.scripts]
moonarchive = "moonarchive.app:main"

[project.optional-dependencies]
dev = [
    "mypy >= 1.9",
    "pytest",
    "ruff >= 0.3",
]
keepawake = [
    "wakepy == 0.9.1",
]
cookies = [
    "browser-cookie3 == 0.20.1",
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
]

[tool.setuptools.package-data]
"moonarchive" = ["py.typed"]

[tool.ruff]
line-length = 96
lint.extend-select = ["ANN001", "ANN201", "ANN202"]

[tool.pytest.ini_options]
addopts = "--ignore=tests/manual"
